# monkeymetal-console

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  partitions.csv  sdkconfig.defaults
components/audio_engine/: CMakeLists.txt  audio_engine.c  audio_engine.h
components/audio_engine/codec_board/: codec_init.c
components/gfx_engine/: CMakeLists.txt  gfx_bayer.c  gfx_draw.c  gfx_engine.h  gfx_font8x8.h  gfx_framebuffer.c  gfx_text.c
components/gnuboy/: CMakeLists.txt  dummy.c  lcd.c  loader.c  mem.c
components/gnuboy_sys_esp32idf/: CMakeLists.txt  gnuboy_sys_esp32idf.c  gnuboy_sys_esp32idf.cpp  gnuboy_sys_esp32idf.h
components/input_bt_hid/: CMakeLists.txt  bt_hid_host.c  bt_hid_host.h
components/lua_runtime/: CMakeLists.txt  mm_lua_audio.c  mm_lua_gfx.c  mm_lua_input.c  mm_lua_runtime.c  mm_lua_runtime.h  mm_lua_system.c  mm_sensors.c  mm_sensors.h
components/lua_runtime/lua54/: luaconf.h  luaconf_esp32.h
components/port_bsp/: CMakeLists.txt  display_bsp.cpp  display_bsp.h  port_bsp.cpp  port_bsp.h
components/udp_pad/: CMakeLists.txt  udp_pad.c  udp_pad.h
components/wifi_bsp/: CMakeLists.txt  user_secrets.h.example  wifi_bsp.c  wifi_bsp.h  wifi_file_server.c  wifi_file_server.h
docs/: DEVELOPMENT-GUIDE.md  MonkeyMetal-Console-Design.md  boot-splash.md  gfx-engine.md
docs/specs/: gba-gfx-spec.md  gba-physics-spec.md
main/: CMakeLists.txt  key_test.cpp  key_test.h  main.cpp  monkey_metal.cpp  monkey_metal.h  user_config.h
sdcard_root/games/gamepad_test/: cart.lua
sdcard_root/games/hello/: cart.lua  meta.json
sdcard_root/games/monkey_leaper/: cart.lua  meta.json
sdcard_root/games/snake/: cart.lua  meta.json
sdcard_root/games/space_defender/: cart.lua  meta.json
sdcard_root/system/launcher/: cart.lua
tools/: send_file.py  udp_pad.py
